k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: letter-ingress
  namespace: letter
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: letter.fraguinha.com
    http:
      paths:
      - backend:
          service:
            name: website
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - letter.fraguinha.com
    secretName: letter.fraguinha.com-tls-secret
